vlib/v/checker/tests/match_expr_range_low_higher_than_high.out
vlib/v/checker/tests/match_expr_range_low_higher_than_high.vv:5:3: error: the start value `20` should be lower than the end value `10`
    3 |     value := 10
    4 |     match value {
    5 |         20...10 {}
      |         ~~~~~~~
    6 |         else {}
    7 |     }
